--- a/src/algoritmosecuencial/Ejercicio8.form
+++ b/src/algoritmosecuencial/Ejercicio8.form
@@ -153,6 +153,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="txtDescu">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="160" y="170" width="170" height="40"/>
@@ -160,6 +163,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="txtTpagar">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="160" y="230" width="170" height="40"/>
